# learning-cmake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/test-program/: CMakeLists.txt  main.cxx
src/: CMakeLists.txt
src/C/: CMakeLists.txt  function_1.c  function_1.h
src/Fortran/: CMakeLists.txt  function_2.f90  functions.f90  functions.h
src/Group/: CMakeLists.txt  Tetrahedron.cxx  Tetrahedron.hxx
